# trustless-procotol

./: .gitignore  Cargo.toml  README.md  start_p2p_nodes.sh  test_transaction.sh
src/: circuit.rs  main.rs  prover.rs
src/dkg/: ephemeral_dkg.rs  mod.rs
src/key_shares/: gen_key_shares.rs  mod.rs
src/network/: peer.rs
src/nodes/: mod.rs  node.rs  nodes.rs
src/storage/: mod.rs
src/transaction/: transaction.rs
src/wallet_gen/: mod.rs  secure_storage.rs  wallet.rs  zk_ownership.rs
src/zk/: mod.rs  zk_ownership.rs
