[package]
name = "zk-signing"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = "0.4"
ark-serialize = "0.4"
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
rand = "0.8"
anyhow = "1.0"
ethers = "2.0"
secp256k1 = { version = "0.28", features = ["rand"] }
tiny-keccak = "2.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bip39 = "2.0"
security-framework = "2.8"
core-foundation = "0.9"
web3 = "0.17.0"
tokio = { version= "1", features = ["full"] }
