[package]
name = "zk-signing"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = "0.4"
ark-serialize = "0.4"
ark-bls12-381 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-poly = "0.4"
ark-poly-commit = "0.4"
axum = "0.7"
rand = "0.8"
anyhow = "1.0"
ethers = "2.0"
secp256k1 = { version = "0.28", features = ["rand"] }
tiny-keccak = "2.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bip39 = "2.0"
security-framework = "2.8"
core-foundation = "0.9"
web3 = "0.17.0"
tokio = { version= "1", features = ["full"] }
clap = "4.5"
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo= "0.37.2"
uuid = { version = "1.0", features = ["v4"] }
bincode = "1.3"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
